; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/pgbench/extr_pgbench.c_postprocess_sql_command.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/pgbench/extr_pgbench.c_postprocess_sql_command.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64, i32, %struct.TYPE_5__, i32*, i32 }
%struct.TYPE_5__ = type { i32 }

@SQL_COMMAND = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [3 x i8] c"\0A\0D\00", align 1
@querymode = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_6__*)* @postprocess_sql_command to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @postprocess_sql_command(%struct.TYPE_6__* %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  %3 = alloca [128 x i8], align 16
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %2, align 8
  %4 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = load i64, i64* @SQL_COMMAND, align 8
  %8 = icmp eq i64 %6, %7
  %9 = zext i1 %8 to i32
  %10 = call i32 @Assert(i32 %9)
  %11 = getelementptr inbounds [128 x i8], [128 x i8]* %3, i64 0, i64 0
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 2
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @strlcpy(i8* %11, i32 %15, i32 128)
  %17 = getelementptr inbounds [128 x i8], [128 x i8]* %3, i64 0, i64 0
  %18 = call i64 @strcspn(i8* %17, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  %19 = getelementptr inbounds [128 x i8], [128 x i8]* %3, i64 0, i64 %18
  store i8 0, i8* %19, align 1
  %20 = getelementptr inbounds [128 x i8], [128 x i8]* %3, i64 0, i64 0
  %21 = call i32 @pg_strdup(i8* %20)
  %22 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %23 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %22, i32 0, i32 4
  store i32 %21, i32* %23, align 8
  %24 = load i32, i32* @querymode, align 4
  switch i32 %24, label %45 [
    i32 128, label %25
    i32 130, label %38
    i32 129, label %38
  ]

25:                                               ; preds = %1
  %26 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %27 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %26, i32 0, i32 2
  %28 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %31 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %30, i32 0, i32 3
  %32 = load i32*, i32** %31, align 8
  %33 = getelementptr inbounds i32, i32* %32, i64 0
  store i32 %29, i32* %33, align 4
  %34 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %35 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 8
  %37 = add nsw i32 %36, 1
  store i32 %37, i32* %35, align 8
  br label %47

38:                                               ; preds = %1, %1
  %39 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %40 = call i32 @parseQuery(%struct.TYPE_6__* %39)
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %44, label %42

42:                                               ; preds = %38
  %43 = call i32 @exit(i32 1) #3
  unreachable

44:                                               ; preds = %38
  br label %47

45:                                               ; preds = %1
  %46 = call i32 @exit(i32 1) #3
  unreachable

47:                                               ; preds = %44, %25
  ret void
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @strlcpy(i8*, i32, i32) #1

declare dso_local i64 @strcspn(i8*, i8*) #1

declare dso_local i32 @pg_strdup(i8*) #1

declare dso_local i32 @parseQuery(%struct.TYPE_6__*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
